--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </body>
 <p id="title">คนละครึ่ง RUSH B</p>
-<p id="remaining"></p>
+<p id="remaining">โปรดรอสักครู่...</p>
 <p id="speed"></p>
 <script>
     let last_sec = 0;
