--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>คนละครึ่ง Remaning</title>
+    <title>คนละครึ่งแบบ RUSH B</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,6 @@
 <body>
 
 </body>
-<p id="title">คนละครึ่ง RUSH B</p>
 <p id="remaining">โปรดรอสักครู่...</p>
 <p id="speed"></p>
 <script>
